# qqbot-onebot-archiver

./: .dockerignore  Dockerfile  README.md  pyproject.toml
deploy/: docker-compose.yml
src/qqbot/: config.py  main.py  onebot_api.py  reactions.py  storage.py
src/qqbot/plugins/: __init__.py  archive.py
tests/: test_forward_archive.py  test_reactions.py
