[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqbot"
version = "0.1.0"
description = "Standalone QQ/OneBot message archiver and reaction bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "nonebot2[fastapi,websockets]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
]

[project.scripts]
qqbot = "qqbot.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
